# oligocheck

./: .gitignore  .gitmodules  .ignore  README.md  environment.yml  primers.py  processnames.py  ps_bridges.tsv  pyproject.toml  readouts.py  refactor.py  run.py
generator/src/: main.rs
oligocheck/: algorithms.py  boilerplate.py  geneframe.py  io.py  logging.py  seqcalc.py  sequtils.py  tenx.py  utils.py
oligocheck/merfish/: actual_encoding.py  alignment.py  blockParse.py  crawler.py  encoding.py  external_data.py  filtration.py  nnupack.py  readouts.py
oligocheck/merfish/readouts/: amplifiers.py  blacklist.py  codebook.py  genreadouts.py  pickreadoutsfromold.py
oligocheck/picker/: codebook.py  fix_gene_name.py  visualize.py
scripts/: analysis.py  analyze_existing.py  construct.py  encode_merfish.py  get_fpkm.py  make_codebook.py  make_header.py  new_postprocess.py  postprocess_merfish.py  run.py
seq_generator/src/: main.rs
test/: test_10x.py  test_utils.py
